progs/tests/faulty.sy
asdflökja;;;;
123
asd

// error: @_
// error: @_
